# pokemon-trading-platform

./: .gitignore  Cargo.toml  docker-compose-clients.yml  docker-compose-db.yml  docker-compose-server.yml  docker-compose.yml  readme.md
pokemon-server/: Cargo.toml  dockerfile
pokemon-server/config/: docker.ini  local.ini
pokemon-server/src/: data_type.rs  database.rs  main.rs  scheduler.rs  settings.rs  status_board.rs  trade_board.rs  tx_board.rs
test-script/: post.json
traders/: Cargo.toml  dockerfile
traders/config/: docker.ini  local.ini
traders/src/: data_type.rs  main.rs  settings.rs  trader.rs
