#package]
#name = "pokemon-trading-platform"
#version = "0.1.0"
#edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members=["pokemon-server", "traders"]

#[[bin]]
#name = "pokemon-server"
#path = "./pokemon-server/src/main.rs"

#[[bin]]
#name = "traders"
#path = "./traders/src/main.rs"