[package]
name = "pokemon-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8.4"
postgres = { version = "0.19.2", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2.2", features = ["derive"] }
contracts = "0.6.2"